[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/character_create.gd" type="Script" id=1]
[ext_resource path="res://rpg_test/boobwiz.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -5.0
margin/top = -6.0
margin/right = 1036.0
margin/bottom = 608.0
__meta__ = {
"_edit_lock_": true
}

[node name="FeatBg" type="ColorFrame" parent="."]

visibility/self_opacity = 0.69
focus_neighbour/bottom = NodePath("../Back")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 19.0
margin/top = 405.0
margin/right = 136.0
margin/bottom = 541.0
color = Color( 0.230469, 0.230469, 0.230469, 1 )

[node name="Social" type="CheckBox" parent="FeatBg"]

editor/display_folded = true
focus_neighbour/top = NodePath("../../ColorFrame/ClassButton")
focus_neighbour/right = NodePath("../../Name")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = 23.0
margin/right = 125.0
margin/bottom = 46.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="SocialLabel" type="Label" parent="FeatBg/Social"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -95.0
margin/top = 4.0
margin/right = -58.0
margin/bottom = 18.0
text = "Social"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Strong" type="CheckBox" parent="FeatBg"]

editor/display_folded = true
focus_neighbour/right = NodePath("../../Name")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = 46.0
margin/right = 125.0
margin/bottom = 69.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StrongLabel" type="Label" parent="FeatBg/Strong"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -95.0
margin/top = 4.0
margin/right = -55.0
margin/bottom = 18.0
text = "Strong"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Agile" type="CheckBox" parent="FeatBg"]

editor/display_folded = true
focus_neighbour/right = NodePath("../../Name")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = 69.0
margin/right = 125.0
margin/bottom = 92.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="AgileLabel" type="Label" parent="FeatBg/Agile"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -95.0
margin/top = 4.0
margin/right = -63.0
margin/bottom = 18.0
text = "Agile"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Educated" type="CheckBox" parent="FeatBg"]

editor/display_folded = true
focus_neighbour/right = NodePath("../../Name")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = 92.0
margin/right = 125.0
margin/bottom = 115.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="EducatedLabel" type="Label" parent="FeatBg/Educated"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -95.0
margin/top = 4.0
margin/right = -37.0
margin/bottom = 18.0
text = "Educated"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Focused" type="CheckBox" parent="FeatBg"]

editor/display_folded = true
focus_neighbour/right = NodePath("../../Name")
focus_neighbour/bottom = NodePath("../../Back")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = 115.0
margin/right = 125.0
margin/bottom = 138.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="FocusedLabel" type="Label" parent="FeatBg/Focused"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -95.0
margin/top = 4.0
margin/right = -42.0
margin/bottom = 18.0
text = "Focused"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="FeatBg"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 6.0
margin/right = 117.0
margin/bottom = 20.0
text = "Select a feat"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Next" type="Button" parent="."]

editor/display_folded = true
focus_neighbour/left = NodePath("../Name")
focus_neighbour/top = NodePath("../ColorFrame/StatDad/StatRoller")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 925.0
margin/top = 552.0
margin/right = 1004.0
margin/bottom = 578.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Next"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -1.0
margin/right = 79.0
margin/bottom = 26.0
text = "Create"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="."]

editor/display_folded = true
focus_neighbour/top = NodePath("../FeatBg")
focus_neighbour/right = NodePath("../Name")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 23.0
margin/top = 552.0
margin/right = 102.0
margin/bottom = 578.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="Back"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -1.0
margin/right = 80.0
margin/bottom = 26.0
text = "Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Name" type="LineEdit" parent="."]

editor/display_folded = true
focus_neighbour/left = NodePath("../FeatBg/Social")
focus_neighbour/top = NodePath("../ColorFrame/StatDad/StatRoller")
focus_neighbour/right = NodePath("../Next")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 451.0
margin/top = 561.0
margin/right = 566.0
margin/bottom = 585.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="Name"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -13.0
margin/right = 115.0
margin/bottom = 1.0
text = "Character name"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 4.0
margin/right = 175.0
margin/bottom = 156.0
color = Color( 0.203922, 0.203922, 0.211765, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ColorFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 9.0
margin/right = 167.0
margin/bottom = 49.0
bbcode/enabled = false
bbcode/bbcode = "Stat      			B   M   T"
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="StatDad" type="Control" parent="ColorFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 17.0
margin/right = 37.0
margin/bottom = 57.0

[node name="StatRoller" type="Button" parent="ColorFrame/StatDad"]

editor/display_folded = true
focus_neighbour/right = NodePath("../../../Next")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 89.0
margin/right = 156.0
margin/bottom = 126.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="StrengthLabel" type="Label" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -4.0
margin/top = -79.0
margin/right = 49.0
margin/bottom = -65.0
text = "Strength"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AgilityLabel" type="Label" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -4.0
margin/top = -59.0
margin/right = 54.0
margin/bottom = -45.0
text = "Agility"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="CharismaLabel" type="Label" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -4.0
margin/top = -39.0
margin/right = 55.0
margin/bottom = -25.0
text = "Charisma"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="IntellectLabel" type="Label" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -4.0
margin/top = -19.0
margin/right = 50.0
margin/bottom = -5.0
text = "Intellect"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 41.0
margin/top = 12.0
margin/right = 99.0
margin/bottom = 33.0
bbcode/enabled = false
bbcode/bbcode = "Roll Dice"
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Base0" type="RichTextLabel" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = -80.0
margin/right = 137.0
margin/bottom = -40.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Base1" type="RichTextLabel" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = -60.0
margin/right = 137.0
margin/bottom = -20.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Base2" type="RichTextLabel" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = -40.0
margin/right = 137.0
margin/bottom = 0.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Base3" type="RichTextLabel" parent="ColorFrame/StatDad/StatRoller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = -20.0
margin/right = 137.0
margin/bottom = 20.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Total Stat" type="Control" parent="ColorFrame"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 147.0
margin/top = 26.0
margin/right = 187.0
margin/bottom = 66.0

[node name="Total1" type="RichTextLabel" parent="ColorFrame/Total Stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Total2" type="RichTextLabel" parent="ColorFrame/Total Stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 21.0
margin/right = 40.0
margin/bottom = 61.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Total3" type="RichTextLabel" parent="ColorFrame/Total Stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 41.0
margin/right = 40.0
margin/bottom = 81.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Total4" type="RichTextLabel" parent="ColorFrame/Total Stat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 61.0
margin/right = 40.0
margin/bottom = 101.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="ClassButton" type="OptionButton" parent="ColorFrame"]

hint/tooltip = "-Select a Class-"
focus_neighbour/right = NodePath("../../Name")
focus_neighbour/bottom = NodePath("../../FeatBg/Social")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 157.0
margin/right = 167.0
margin/bottom = 193.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Modifier1" type="RichTextLabel" parent="ColorFrame/ClassButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = -131.0
margin/right = 166.0
margin/bottom = -91.0
custom_colors/default_color = Color( 0, 1, 0.203125, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Modifier2" type="RichTextLabel" parent="ColorFrame/ClassButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = -111.0
margin/right = 166.0
margin/bottom = -71.0
custom_colors/default_color = Color( 0, 1, 0.15625, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Modifier3" type="RichTextLabel" parent="ColorFrame/ClassButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = -91.0
margin/right = 166.0
margin/bottom = -51.0
custom_colors/default_color = Color( 0, 1, 0.15625, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Modifier4" type="RichTextLabel" parent="ColorFrame/ClassButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = -71.0
margin/right = 166.0
margin/bottom = -31.0
custom_colors/default_color = Color( 0, 1, 0.15625, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 503.63, 455.358 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="ColorFrame/StatDad/StatRoller" to="." method="_on_StatRoller_pressed"]


